# SummationByParts

./: .gitignore  Cargo.toml  README.md  index.html  main.js  make_wasm.py
benches/: euler.rs  maxwell.rs
euler/: Cargo.toml
euler/benches/: bench.rs
euler/misc/: eigenvalues_euler.py  euler.py  euler_vortex_evaluate.py
euler/src/: eval.rs  lib.rs  vortex.rs
euler/tests/: convergence.rs
gridgeneration/: Cargo.toml
gridgeneration/src/: lib.rs  main.rs
heat-equation/: Cargo.toml
heat-equation/src/: main.rs
maxwell/: Cargo.toml
maxwell/benches/: bench.rs
maxwell/misc/: eigenvalues.py
maxwell/src/: lib.rs  sparse.rs
misc/: eigenvalues_rotated.py
multigrid/: Cargo.toml  README.md  eulerplot  pyproject.toml  quad.json  sedecim.json
multigrid/examples/: double.json  expressions_vortex.json  gresho.json  interpolation.json  mix_operators.json  quad.json  sedecim.json  single.json  smooth_periodic.json  tsection.json
multigrid/plotter/: plotter.py
multigrid/src/: eval.rs  file.rs  input.rs  main.rs  parsing.rs  system.rs
multigrid/src/eval/: evalexpr.rs
sbp/: Cargo.toml  README.md  eulerplot
sbp/benches/: euler.rs  maxwell.rs  sbpoperators.rs
sbp/examples/: multigrid.rs  quad.json
sbp/examples/multigrid/: bin.rs
sbp/src/: euler.rs  grid.rs  integrate.rs  lib.rs  maxwell.rs  operators.rs  utils.rs
sbp/src/operators/: algos.rs  interpolation.rs  traditional4.rs  traditional8.rs  upwind4.rs  upwind4h2.rs  upwind9.rs  upwind9h2.rs
sbp/src/operators/algos/: constmatrix.rs  fastfloat.rs
sbp/src/operators/interpolation/: interpolation4.rs  interpolation8.rs  interpolation9.rs  interpolation9h2.rs
sbp/src/utils/: jacobi.rs  kronecker_product.rs  outer_product.rs
sbp/tests/: convergence.rs  single_period.rs
shallow_water/: Cargo.toml
shallow_water/misc/: fluxes.py  report.tex
shallow_water/src/: characteristics.rs  lib.rs
sparse/src/: main.rs
src/: euler.rs  grid.rs  integrate.rs  lib.rs  maxwell.rs  operators.rs
src/benches/: bench.rs
src/operators/: traditional4.rs  upwind4.rs  upwind9.rs
utils/: README.md
utils/constmatrix/: Cargo.toml
utils/constmatrix/src/: lib.rs
utils/fast-float/: Cargo.toml
utils/fast-float/src/: lib.rs
utils/float/: Cargo.toml
utils/float/src/: fastfloat.rs  lib.rs
utils/integrate/: Cargo.toml
utils/integrate/src/: lib.rs
webfront/: Cargo.toml  README.md  lib.rs  make_wasm.py
webfront/euler/: euler.js  index.html
webfront/frontend/: index.html  main.js  style.css
webfront/maxwell/: main.js
webfront/misc/: index.html  main.js  style.css
webfront/pages/: index.html  main.js  style.css
webfront/pages/euler/: euler.js
webfront/pages/maxwell/: index.html  main.js
webfront/pages/shallowWater/: index.html  main.js
webfront/src/: euler.rs  lib.rs  maxwell.rs  shallow_water.rs
