[workspace]
members = [
    "sbp",
    "webfront",
    "multigrid",
    "euler",
    "maxwell",
    "shallow_water",
    "gridgeneration",
    "heat-equation",
]

default-members = ["sbp", "euler", "maxwell", "shallow_water"]

[profile.bench]
debug = true

[profile.release]
debug = true

[patch]
[patch.crates-io]
hdf5 = { git = "https://github.com/mulimoen/hdf5-rust.git", branch = "feature/resizable_idx" }
hdf5-sys = { git = "https://github.com/mulimoen/hdf5-rust.git", branch = "feature/resizable_idx" }
packed_simd = { git = "https://github.com/rust-lang/packed_simd.git" }
