[workspace]
members = [
    "sbp",
    "webfront",
    "multigrid",
    "euler",
    "maxwell",
    "shallow_water",
    "gridgeneration",
    "heat-equation",
    "utils/float",
    "utils/integrate",
    "utils/constmatrix",
]

default-members = ["sbp", "euler", "maxwell", "shallow_water"]

[profile.bench]
debug = true

[profile.release]
debug = true
