[package]
name = "euler"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2018"

[features]
# Internal feature flag to gate the expensive tests
# which should be run only in release builds
expensive_tests = []
serde1 = ["serde", "arrayvec/serde"]

[dependencies]
ndarray = "0.14.0"
sbp = { path = "../sbp" }
arrayvec = "0.6.0"
serde = { version = "1.0.115", default-features = false, optional = true, features = ["derive"] }
integrate = { path = "../utils/integrate" }

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "bench"
harness = false
