[package]
name = "euler"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2021"

[features]
# Internal feature flag to gate the expensive tests
# which should be run only in release builds
expensive_tests = []
serde1 = ["serde", "arrayvec/serde"]

[dependencies]
ndarray = "0.15.4"
sbp = { path = "../sbp" }
arrayvec = "0.7.2"
serde = { version = "1.0.138", default-features = false, optional = true, features = ["derive"] }
integrate = { path = "../utils/integrate" }
once_cell = "1.13.0"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench"
harness = false
