[package]
name = "maxwell"
version = "0.1.0"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>"]
edition = "2018"

[features]
sparse = ["sbp/sparse", "sprs"]

[dependencies]
ndarray = "0.13.1"
sbp = { path = "../sbp" }
sprs = { version = "0.9.0", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "bench"
harness = false
