[package]
name = "maxwell"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2021"

[features]
sparse = ["sbp/sparse", "dep:sprs"]

[dependencies]
ndarray = "0.15.4"
sbp = { path = "../sbp" }
sprs = { version = "0.11.0", optional = true, default-features = false }
integrate = { path = "../utils/integrate" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench"
harness = false
