[package]
name = "multigrid"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2018"


[dependencies]
sbp = { path = "../sbp", features = ["serde1"] }
euler = { path = "../euler", features = ["serde1"] }
hdf5 = "0.7.0"
integrate = { path = "../utils/integrate" }
rayon = "1.3.0"
indicatif = "0.17.0-beta.1"
ndarray = { version = "0.14.0", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }
json5 = "0.3.0"
indexmap = { version = "1.5.2", features = ["serde-1"] }
argh = "0.1.4"
evalexpr = "6.3.0"
crossbeam-channel = "0.5.0"
crossbeam-utils = "0.8.5"
