[package]
name = "multigrid"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2021"


[dependencies]
sbp = { path = "../sbp", features = ["serde1"] }
euler = { path = "../euler", features = ["serde1"] }
hdf5 = "0.8.1"
integrate = { path = "../utils/integrate" }
rayon = "1.5.3"
indicatif = "0.17.0"
ndarray = { version = "0.15.4", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }
json5 = "0.4.1"
indexmap = { version = "1.9.1", features = ["serde-1"] }
argh = "0.1.8"
evalexpr = "7.2.0"
crossbeam-channel = "0.5.5"
crossbeam-utils = "0.8.10"
parking_lot = "0.12.1"
lock_api = "0.4.7"
arrayvec = "0.7.2"
