[package]
name = "sbp"
version = "0.1.1"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2021"

[dependencies]
ndarray = { version = "0.15.4", features = ["approx"] }
approx = "0.5.1"
sprs = { version = "0.11.0", optional = true, default-features = false }
serde = { version = "1.0.138", optional = true, default-features = false, features = ["derive"] }
num-traits = "0.2.15"
float = { path = "../utils/float" }
constmatrix = { path = "../utils/constmatrix" }

[features]
# Use f32 as precision, default is f64
f32 = ["float/f32"]
sparse = ["dep:sprs"]
serde1 = ["dep:serde", "ndarray/serde"]

[dev-dependencies]
iai = "0.1.1"

[[bench]]
name = "sbpoperators"
harness = false
