[package]
name = "sbp-web"
version = "0.1.1"
authors = ["Magnus Ulimoen <flymagnus@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
wasm-bindgen = "0.2.60"
console_error_panic_hook = "0.1.6"
wee_alloc = "0.4.5"
sbp = { path = "../sbp", features = ["f32"] }
ndarray = "0.13.0"
euler = { path = "../euler" }
maxwell = { path = "../maxwell" }
shallow-water = { path = "../shallow_water" }
console_log = "0.2.0"
log = "0.4.8"
