[package]
name = "sbp-web"
version = "0.1.1"
authors = ["Magnus Ulimoen <magnus@ulimoen.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.81"
console_error_panic_hook = "0.1.7"
sbp = { path = "../sbp", features = ["f32"] }
ndarray = "0.15.4"
euler = { path = "../euler" }
maxwell = { path = "../maxwell" }
shallow-water = { path = "../shallow_water" }
console_log = "0.2.0"
log = "0.4.17"
